tests/machine/x/cobol/bool_chain.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/bool_chain.cob:8: error: syntax error, unexpected <, expecting ) or - or +
/workspace/mochi/tests/machine/x/cobol/bool_chain.cob:11: error: syntax error, unexpected <, expecting ) or - or +
/workspace/mochi/tests/machine/x/cobol/bool_chain.cob:14: error: syntax error, unexpected <, expecting ) or - or +
/workspace/mochi/tests/machine/x/cobol/bool_chain.cob: in paragraph 'BOOM':
/workspace/mochi/tests/machine/x/cobol/bool_chain.cob:19: error: syntax error, unexpected PROCEDURE

